fix: menu overflowed

--- a/src/components/Sider/Sider.module.scss
+++ b/src/components/Sider/Sider.module.scss
@@ -2,6 +2,7 @@
 
 .menuWrapper {
   height: 100%;
+  overflow: hidden;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
   background-color: $primary-dark;
 }
